[tool.poetry]
name = "algorithms-mixtape"
version = "0.1.0"
description = "Notes on algorithms"
authors = ["julianmclain <julianrmclain@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
flake8-black = "^0.2.0"

[tool.poetry.scripts]
test = 'scripts:test'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
